# sangin

./: .gitignore  README.md  build_csv.py  consensus.py  consensus_from_file.py  eval.py  hafez_demo.txt  infer.py  label_map.json  main.py  pyproject.toml  saadi_ghazals.jsonl.tar.zst  saeb_meters.csv.tar.zst  sample.json  scrape.py  shahnama_eskandar.jsonl.tar.zst  train.py
data/: hafez_ghazals.jsonl.tar.zst  masnavi.jsonl.tar.zst  nezami_hp.jsonl.tar.zst  nezami_ks.jsonl.tar.zst  nezami_lm.jsonl.tar.zst  nezami_ma.jsonl.tar.zst  shahnama_sohrab.jsonl.tar.zst
