[project]
name = "sangin"
version = "0.1.0"
description = "TBD"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "datasets>=4.8.4",
  "hazm>=0.10.0",
  "pandas>=2.3.1",
  "requests>=2.32.4",
  "ruff>=0.15.7",
  "scikit-learn>=1.7.1",
  "torch>=2.7.1",
  "transformers[torch]>=5.3.0",
  "ty>=0.0.25",
]
